--- a/Day44/css/styles.css
+++ b/Day44/css/styles.css
@@ -1,113 +1,42 @@
-a {
-  color: #7886c7;
-}
-
 body {
   background-color: #fff2f2;
   margin: 0;
   text-align: center;
-  font-family: "Roboto", sans-serif;
-}
-
-h1 {
-  color: #2d336b;
-  font-family: "Italianno", cursive;
-  font-size: 6rem; /* 16px = 100% = 1em  / font-size is inherited. */
-  line-height: 2;
-  margin: 3rem auto 0 auto; /* clock-wise */
-}
-
-h2 {
-  color: #2d336b;
-  font-family: "Roboto", sans-serif;
-  font-size: 2rem; /* root em, 40px = 250% = 2.5em */
-  font-weight: normal;
-}
-
-h3 {
-  color: #7886c7;
-  font-family: "Roboto", sans-serif;
-}
-
-hr {
-  border-style: none;
-  border-top: .5rem dotted;
-  color: #A9B5DF;
-  width: 10%;
-  margin: 5rem auto 5rem auto;
-}
-
-.skill-row {
-  width: 50%;
-  margin: 6rem auto 6rem auto;
-  text-align: left;
-  line-height: 2;
-  
-}
-
-.web-image {
-  width: 25%;
-  float: left; /* move an element out of the normal document flow and position it to the left or right of its container */
-  /* clear: left; --> anti-float */
-  margin: 0 2rem 2rem 0;
-}
-
-
-.server-image {
-  width: 25%;
-  float: right; /* move an element out of the normal document flow and position it to the left or right of its container */
-  margin: 0 0 2rem 2rem;
 }
 
 .top_container {
   background-color: #a9b5df;
-  padding-top: 100px;
   position: relative;
+  padding-top: 100px;
+}
+
+h1 {
+  width: 30%;
+  margin: 0 auto 0 auto;
 }
 
 .top_cloud {
   position: absolute;
-  right: 30%;
   top: 50px;
+  right: 30%;
 }
 
 .bottom_cloud {
-  bottom: 300px;
-  left: 30%;
   position: absolute;
+  left: 30%;
+  bottom: 300px;
 }
 
-.contact-me {
-  margin: 3rem auto 3rem auto;
-  line-height: 2;
+.middle_container,
+.bottom_container {
+  height: 200px;
+  width: 200px;
 }
 
-.contact-me p {
-  margin-bottom: 3rem;
+.middle_container {
+  background-color: #7886c7;
 }
 
-.btn {
-  -webkit-border-radius: 8;
-  -moz-border-radius: 8;
-  border-radius: 8px;
-  color: #FFF2F2;
-  font-size: 20px;
-  background: #2D336B;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-}
-
-.btn:hover {
-  background: #7886C7;
-  text-decoration: none;
-}
-
-.bottom-container {
-  background-color: #2D336B;
-  padding: 3rem;
-}
-
-.copyright {
-  color: #FFF2F2;
-  margin-bottom: 0;
+.bottom_container {
+  background-color: #2d336b;
 }
